--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <verbose>true</verbose>
+                    <fork>true</fork>
+                    <executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac</executable>
                 </configuration>
             </plugin>
             <plugin>
